- Fixed Stone Talus issues with brain memories (SBL does not deserialize brains from NBT by default). - Added multipart entity detection mixins for DebugUtils and Jade. - Added Jade compat to see Stone Talus's current attack. - Fixed Stone Talus attacking AI, attacking works nearly seamlessly. - Temporarly reduced size scale of Stone Talus to 1 until large mob pathfinding solution can be found.