@@ -1,36 +1,42 @@
 package com.Thelnfamous1.craft_of_the_wild.entity;
 
 import com.Thelnfamous1.craft_of_the_wild.util.COTWUtil;
+import com.google.common.collect.ImmutableList;
 import net.minecraft.util.ByIdMap;
 import net.minecraft.util.StringRepresentable;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.List;
 import java.util.function.IntFunction;
 
 public enum StoneTalusAttackType implements AnimatedAttacker.AttackType, StringRepresentable {
-    POUND(0, "pound", List.of(COTWUtil.secondsToTicks(0.92F), COTWUtil.secondsToTicks(3.08F)), COTWUtil.secondsToTicks(3.5833F), 1, AnimatedAttacker.DamageMode.AREA_OF_EFFECT),
-    THROW(1, "throw", List.of(COTWUtil.secondsToTicks(0.71F), COTWUtil.secondsToTicks(1.96F)), COTWUtil.secondsToTicks(5.9167F), 1.5, AnimatedAttacker.DamageMode.RANGED),
-    HEADBUTT(2, "headbutt", List.of(COTWUtil.secondsToTicks(2.5F)), COTWUtil.secondsToTicks(6.4583F), 5D / 3D, AnimatedAttacker.DamageMode.AREA_OF_EFFECT),
-    PUNCH(3, "punch", List.of(COTWUtil.secondsToTicks(0.54F)), COTWUtil.secondsToTicks(1.25F), 1, AnimatedAttacker.DamageMode.MELEE);
+    POUND(0, "pound", ImmutableList.of(
+            AnimatedAttacker.AttackPoint.of(0.92F, 1, AnimatedAttacker.AttackPoint.DamageMode.AREA_OF_EFFECT),
+            AnimatedAttacker.AttackPoint.of(3.08F, 1, AnimatedAttacker.AttackPoint.DamageMode.AREA_OF_EFFECT)),
+            COTWUtil.secondsToTicks(3.5833F)),
+    THROW(1, "throw", ImmutableList.of(
+            AnimatedAttacker.AttackPoint.of(0.71F, 1.5, AnimatedAttacker.AttackPoint.DamageMode.RANGED),
+            AnimatedAttacker.AttackPoint.of(1.96F, 1.5, AnimatedAttacker.AttackPoint.DamageMode.RANGED)),
+            COTWUtil.secondsToTicks(5.9167F)),
+    HEADBUTT(2, "headbutt", ImmutableList.of(
+            AnimatedAttacker.AttackPoint.of(2.5F, 5D / 3D, AnimatedAttacker.AttackPoint.DamageMode.AREA_OF_EFFECT)),
+            COTWUtil.secondsToTicks(6.4583F)),
+    PUNCH(3, "punch", ImmutableList.of(
+            AnimatedAttacker.AttackPoint.of(0.54F, 1, AnimatedAttacker.AttackPoint.DamageMode.MELEE)),
+            COTWUtil.secondsToTicks(1.25F));
 
     public static final StringRepresentable.EnumCodec<StoneTalusAttackType> CODEC = StringRepresentable.fromEnum(StoneTalusAttackType::values);
     private static final IntFunction<StoneTalusAttackType> BY_ID = ByIdMap.continuous(StoneTalusAttackType::getId, values(), ByIdMap.OutOfBoundsStrategy.WRAP);
 
     private final int id;
     private final String key;
-    private final Iterable<Integer> attackAnimationActionPoints;
-    private final int attackAnimationLength;
-    private final double baseDamageModifier;
-    private final AnimatedAttacker.DamageMode damageMode;
+    private final ImmutableList<AnimatedAttacker.AttackPoint> attackPoints;
+    private final int attackDuration;
 
-    StoneTalusAttackType(int id, String key, Iterable<Integer> attackAnimationActionPoints, int attackAnimationLength, double baseDamageModifier, AnimatedAttacker.DamageMode damageMode) {
+    StoneTalusAttackType(int id, String key, ImmutableList<AnimatedAttacker.AttackPoint> attackPoints, int attackDuration) {
         this.id = id;
         this.key = key;
-        this.attackAnimationActionPoints = attackAnimationActionPoints;
-        this.attackAnimationLength = attackAnimationLength;
-        this.baseDamageModifier = baseDamageModifier;
-        this.damageMode = damageMode;
+        this.attackPoints = attackPoints;
+        this.attackDuration = attackDuration;
     }
 
     public static StoneTalusAttackType byId(int id){
@@ -48,28 +54,23 @@ public enum StoneTalusAttackType implements AnimatedAttacker.AttackType, StringR
     }
 
     @Override
-    public Iterable<Integer> getAttackAnimationActionPoints() {
-        return this.attackAnimationActionPoints;
+    public ImmutableList<AnimatedAttacker.AttackPoint> getAttackPoints() {
+        return this.attackPoints;
     }
 
     @Override
-    public int getAttackAnimationLength() {
-        return this.attackAnimationLength;
+    public int getAttackDuration() {
+        return this.attackDuration;
+    }
+
+    @Override
+    public String getKey() {
+        return this.key;
     }
 
     @Override
     public String getSerializedName() {
         return this.key;
-    }
-
-    @Override
-    public double getBaseDamageModifier(){
-        return this.baseDamageModifier;
-    }
-
-    @Override
-    public AnimatedAttacker.DamageMode getDamageMode(){
-        return this.damageMode;
     }
 
 }
